modification index.html : table des livres

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,15 @@ body{
 h1{
     color: blue;
 }
+
+table, td, th{
+    border: 1px solid black;
+}
+
+td, th{
+    padding: 10px;
+}
+
+table{
+    border-collapse: collapse;
+}
